--- a/UserTicketService.Tests/UserTicketService.Tests.csproj
+++ b/UserTicketService.Tests/UserTicketService.Tests.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserTicketService\UserTicketService.csproj" />
+  </ItemGroup>
+
 </Project>
